# h5tojson

./: .gitignore  .pre-commit-config.yaml  README.md  dandi_quick_read.ipynb  pyproject.toml  queries.ipynb  scrape_dandi.py  scratch.ipynb  test_h5tojson.py
example/: sub-F1_ses-20190409T210000_behavior+ophys.nwb.json
h5tojson/: __init__.py  conversions.py  h5tojson.py  models.py
linked_arrays/: __init__.py  h5tojson.py
tests/: test_h5tojson.py  test_readme.py
