[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "linked-arrays"
authors = [
  { name="Ryan Ly", email="rly@lbl.gov" },
]
description = "Experimental format for datasets with linked arrays"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "h5py>=2.10",
    "numpy>=1.18",
    "json>=5.8",
    "numcodecs>=0.12.1",
    "fsspec>=2023.10.0",
    "tqdm>=4.66.1",
    "remfile>=0.1.9",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "codespell",
    "ruff",
    "interrogate",
    "mypy",
    "types-ujson",
]

[project.urls]
"Homepage" = "https://github.com/rly/linked-arrays"
# "Documentation" = "https://package.readthedocs.io/"
# "Bug Tracker" = "https://github.com/organization/package/issues"
# "Discussions" = "https://github.com/organization/package/discussions"
# "Changelog" = "https://github.com/organization/package/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# this file is created/updated when the package is installed and used in
# linked_arrays/__init__.py to set `linked_arrays.__version__`
version-file = "linked_arrays/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["linked_arrays"]

[tool.mypy]
no_incremental = true
ignore_missing_imports = true

[tool.interrogate]
fail-under = 95
verbose = 1
ignore-init-module = true
exclude = ["linked_arrays/_version.py"]
ignore-regex = ["set_up_test_file"]  # used in tests

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"
# norecursedirs = "tests/unit/helpers"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,*.json"
ignore-words-list = "fo"

[tool.coverage.run]
branch = true
source = ["linked_arrays/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb"

[tool.ruff]
select = ["E", "F", "T100", "T201", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
]
line-length = 120

[tool.ruff.per-file-ignores]
# Ignore `F401` (imported but unused) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 17

[tool.isort]
profile = "black"
